[gd_scene load_steps=2 format=3 uid="uid://bqn5dapd5anv4"]

[ext_resource type="Script" uid="uid://dq6lq5723gqhm" path="res://hdr_menu_screen_lum_saved.gd" id="1_oel6x"]

[node name="HDRMenuScreenLumSaved" type="VBoxContainer"]
script = ExtResource("1_oel6x")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Style E - Screen Luminance (Saved)"

[node name="HDRCheckButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "HDR"

[node name="HDROptions" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="HDROptions"]
custom_minimum_size = Vector2(28.31, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HDROptions"]
layout_mode = 2

[node name="UseScreenLuminance" type="CheckButton" parent="HDROptions/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use screen luminance"

[node name="CustomLuminance" type="VBoxContainer" parent="HDROptions/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HDROptions/VBoxContainer/CustomLuminance"]
layout_mode = 2

[node name="Label2" type="Label" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessLabel" type="Label" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "200"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HDROptions/VBoxContainer/CustomLuminance"]
layout_mode = 2

[node name="BrightnessSlider" type="HSlider" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 200.0
rounded = true

[node name="ResetBrightness" type="Button" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer4"]
layout_mode = 2
text = "Reset"

[node name="HBoxContainer2" type="HBoxContainer" parent="HDROptions/VBoxContainer/CustomLuminance"]
layout_mode = 2

[node name="Label2" type="Label" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer2"]
layout_mode = 2
text = "Max luminance"

[node name="MaxLumLabel" type="Label" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HDROptions/VBoxContainer/CustomLuminance"]
layout_mode = 2

[node name="MaxLumSlider" type="HSlider" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 200.0
max_value = 2000.0
step = 10.0
value = 1000.0
rounded = true

[node name="ResetMaxLum" type="Button" parent="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer3"]
layout_mode = 2
text = "Reset"

[connection signal="toggled" from="HDRCheckButton" to="." method="_on_hdr_check_button_toggled"]
[connection signal="toggled" from="HDROptions/VBoxContainer/UseScreenLuminance" to="." method="_on_use_screen_luminance_toggled"]
[connection signal="value_changed" from="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer4/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="pressed" from="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer4/ResetBrightness" to="." method="_on_reset_brightness_pressed"]
[connection signal="value_changed" from="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer3/MaxLumSlider" to="." method="_on_max_lum_slider_value_changed"]
[connection signal="pressed" from="HDROptions/VBoxContainer/CustomLuminance/HBoxContainer3/ResetMaxLum" to="." method="_on_reset_max_lum_pressed"]
